Resueltos/pl2012/generacion codigo/sefasgen/compilador/y.output
   0  $accept : PROGRAMA $end

   1  $$1 :

   2  PROGRAMA : CABECERA_PROGRAMA $$1 BLOQUE

   3  CABECERA_PROGRAMA : PROCEDIMIENTO PRINCIPAL PARENT_ABRE PARENT_CIERRA
   4                    | error

   5  $$2 :

   6  BLOQUE : LLAVE_ABRE $$2 CUERPO_BLOQUE LLAVE_CIERRA

   7  CUERPO_BLOQUE : DEC_VAR DEC_PROCEDIMIENTOS BLQ_SENTENCIAS
   8                | DEC_VAR DEC_PROCEDIMIENTOS SENTENCIA
   9                | DEC_VAR BLQ_SENTENCIAS
  10                | DEC_VAR SENTENCIA

  11  DEC_VAR : DELIM_VAR1 CUERPO_DECLA_VARS DELIM_VAR2
  12          |

  13  CUERPO_DECLA_VARS : CUERPO_DECLA_VARS DEC_TIPO
  14                    | DEC_TIPO

  15  $$3 :

  16  DEC_TIPO : TIPO $$3 CONJ_PALABRAS

  17  CONJ_PALABRAS : IDENTIFICADOR PUNTO_COMA
  18                | LISTA_PALS IDENTIFICADOR PUNTO_COMA

  19  $$4 :

  20  LISTA_PALS : LISTA_PALS IDENTIFICADOR $$4 COMA

  21  $$5 :

  22  LISTA_PALS : IDENTIFICADOR $$5 COMA
  23             | error

  24  DEC_PROCEDIMIENTOS : DEC_PROCEDIMIENTOS DEC_PROC
  25                     | DEC_PROC

  26  DEC_PROC : CABECERA BLOQUE

  27  $$6 :

  28  CABECERA : PROCEDIMIENTO IDENTIFICADOR $$6 PARENT_ABRE PARAMETROS PARENT_CIERRA

  29  PARAMETROS : LISTA_PARAMS
  30             |
  31             | error

  32  LISTA_PARAMS : LISTA_PARAMS COMA TIPO IDENTIFICADOR
  33               | TIPO IDENTIFICADOR

  34  EXPRESION : EXPRESION OP_ARIT12 EXPRESION
  35            | EXPRESION OP_ARIT2 EXPRESION
  36            | EXPRESION OP_LOGICO2 EXPRESION
  37            | EXPRESION OP_LOGICO3 EXPRESION
  38            | OP_ARIT12 EXPRESION
  39            | VALOR
  40            | PARENT_ABRE EXPRESION PARENT_CIERRA
  41            | OP_LOGICO1 EXPRESION
  42            | OPERAR_LISTA
  43            | IDENTIFICADOR
  44            | error

  45  OPERAR_LISTA : EXPRESION OP_LISTAS1
  46               | OP_LISTAS1 EXPRESION
  47               | EXPRESION OP_LISTAS2 EXPRESION
  48               | EXPRESION OP_LISTAS3 EXPRESION OP_LISTAS4 EXPRESION

  49  SENTENCIAS : LLAVE_ABRE BLQ_SENTENCIAS LLAVE_CIERRA
  50             | SENTENCIA
  51             | LLAVE_ABRE SENTENCIA LLAVE_CIERRA

  52  BLQ_SENTENCIAS : BLQ_SENTENCIAS SENTENCIA
  53                 | SENTENCIA SENTENCIA

  54  SENTENCIA : OP_SIMPLE PUNTO_COMA
  55            | OP_COMPUESTA

  56  OP_SIMPLE : ASIG
  57            | ENTRADA
  58            | SALIDA
  59            | LLAMADA_PROCEDIMIENTO
  60            | error

  61  OP_COMPUESTA : SENTENCIA_SI
  62               | SENTENCIA_MIENTRAS
  63               | SENTENCIA_EN_CASO

  64  ASIG : IDENTIFICADOR IGUAL EXPRESION

  65  LISTA_EXP : LISTA_EXP COMA EXPRESION
  66            | EXPRESION
  67            |

  68  $$7 :

  69  ENTRADA : LEER $$7 LISTA_IDS

  70  LISTA_IDS : LISTA_IDS COMA IDENTIFICADOR
  71            | IDENTIFICADOR

  72  $$8 :

  73  SALIDA : ESCRIBIR $$8 LISTA_ARG

  74  LISTA_ARG : LISTA_ARG COMA EXPRESION
  75            | LISTA_ARG COMA CADENA
  76            | EXPRESION
  77            | CADENA

  78  SENTENCIA_SI : PARTE_IF PARTE_ELSE

  79  $$9 :

  80  $$10 :

  81  PARTE_IF : SI $$9 PARENT_ABRE EXPRESION PARENT_CIERRA $$10 SENTENCIAS

  82  $$11 :

  83  PARTE_ELSE : SINO $$11 SENTENCIAS
  84             |

  85  SENTENCIA_MIENTRAS : MIENTRAS PARENT_ABRE EXPRESION PARENT_CIERRA SENTENCIAS

  86  SENTENCIA_EN_CASO : SWITCH IDENTIFICADOR LLAVE_ABRE LISTA_CASOS LLAVE_CIERRA

  87  LISTA_CASOS : LISTA_CASOS CASO VALOR DOSPUNTOS SENTENCIAS
  88              | LISTA_CASOS CASO VALOR DOSPUNTOS SENTENCIAS SALTAR
  89              | LISTA_CASOS DEFECTO DOSPUNTOS SENTENCIAS SALTAR
  90              | CASO VALOR DOSPUNTOS SENTENCIAS
  91              | CASO VALOR DOSPUNTOS SENTENCIAS SALTAR

  92  $$12 :

  93  LLAMADA_PROCEDIMIENTO : IDENTIFICADOR $$12 PARENT_ABRE LISTA_EXP PARENT_CIERRA

state 0
	$accept : . PROGRAMA $end  (0)

	error  shift 1
	PROCEDIMIENTO  shift 2
	.  error

	PROGRAMA  goto 3
	CABECERA_PROGRAMA  goto 4


state 1
	CABECERA_PROGRAMA : error .  (4)

	.  reduce 4


state 2
	CABECERA_PROGRAMA : PROCEDIMIENTO . PRINCIPAL PARENT_ABRE PARENT_CIERRA  (3)

	PRINCIPAL  shift 5
	.  error


state 3
	$accept : PROGRAMA . $end  (0)

	$end  accept


state 4
	PROGRAMA : CABECERA_PROGRAMA . $$1 BLOQUE  (2)
	$$1 : .  (1)

	.  reduce 1

	$$1  goto 6


state 5
	CABECERA_PROGRAMA : PROCEDIMIENTO PRINCIPAL . PARENT_ABRE PARENT_CIERRA  (3)

	PARENT_ABRE  shift 7
	.  error


state 6
	PROGRAMA : CABECERA_PROGRAMA $$1 . BLOQUE  (2)

	LLAVE_ABRE  shift 8
	.  error

	BLOQUE  goto 9


state 7
	CABECERA_PROGRAMA : PROCEDIMIENTO PRINCIPAL PARENT_ABRE . PARENT_CIERRA  (3)

	PARENT_CIERRA  shift 10
	.  error


state 8
	BLOQUE : LLAVE_ABRE . $$2 CUERPO_BLOQUE LLAVE_CIERRA  (6)
	$$2 : .  (5)

	.  reduce 5

	$$2  goto 11


state 9
	PROGRAMA : CABECERA_PROGRAMA $$1 BLOQUE .  (2)

	.  reduce 2


state 10
	CABECERA_PROGRAMA : PROCEDIMIENTO PRINCIPAL PARENT_ABRE PARENT_CIERRA .  (3)

	.  reduce 3


state 11
	BLOQUE : LLAVE_ABRE $$2 . CUERPO_BLOQUE LLAVE_CIERRA  (6)
	DEC_VAR : .  (12)

	DELIM_VAR1  shift 12
	error  reduce 12
	PROCEDIMIENTO  reduce 12
	LEER  reduce 12
	ESCRIBIR  reduce 12
	SI  reduce 12
	MIENTRAS  reduce 12
	SWITCH  reduce 12
	IDENTIFICADOR  reduce 12

	CUERPO_BLOQUE  goto 13
	DEC_VAR  goto 14


state 12
	DEC_VAR : DELIM_VAR1 . CUERPO_DECLA_VARS DELIM_VAR2  (11)

	TIPO  shift 15
	.  error

	CUERPO_DECLA_VARS  goto 16
	DEC_TIPO  goto 17


state 13
	BLOQUE : LLAVE_ABRE $$2 CUERPO_BLOQUE . LLAVE_CIERRA  (6)

	LLAVE_CIERRA  shift 18
	.  error


state 14
	CUERPO_BLOQUE : DEC_VAR . DEC_PROCEDIMIENTOS BLQ_SENTENCIAS  (7)
	CUERPO_BLOQUE : DEC_VAR . DEC_PROCEDIMIENTOS SENTENCIA  (8)
	CUERPO_BLOQUE : DEC_VAR . BLQ_SENTENCIAS  (9)
	CUERPO_BLOQUE : DEC_VAR . SENTENCIA  (10)

	error  shift 19
	PROCEDIMIENTO  shift 20
	LEER  shift 21
	ESCRIBIR  shift 22
	SI  shift 23
	MIENTRAS  shift 24
	SWITCH  shift 25
	IDENTIFICADOR  shift 26
	.  error

	DEC_PROCEDIMIENTOS  goto 27
	BLQ_SENTENCIAS  goto 28
	SENTENCIA  goto 29
	DEC_PROC  goto 30
	CABECERA  goto 31
	OP_SIMPLE  goto 32
	OP_COMPUESTA  goto 33
	ASIG  goto 34
	ENTRADA  goto 35
	SALIDA  goto 36
	LLAMADA_PROCEDIMIENTO  goto 37
	SENTENCIA_SI  goto 38
	SENTENCIA_MIENTRAS  goto 39
	SENTENCIA_EN_CASO  goto 40
	PARTE_IF  goto 41


state 15
	DEC_TIPO : TIPO . $$3 CONJ_PALABRAS  (16)
	$$3 : .  (15)

	.  reduce 15

	$$3  goto 42


state 16
	DEC_VAR : DELIM_VAR1 CUERPO_DECLA_VARS . DELIM_VAR2  (11)
	CUERPO_DECLA_VARS : CUERPO_DECLA_VARS . DEC_TIPO  (13)

	DELIM_VAR2  shift 43
	TIPO  shift 15
	.  error

	DEC_TIPO  goto 44


state 17
	CUERPO_DECLA_VARS : DEC_TIPO .  (14)

	.  reduce 14


state 18
	BLOQUE : LLAVE_ABRE $$2 CUERPO_BLOQUE LLAVE_CIERRA .  (6)

	.  reduce 6


state 19
	OP_SIMPLE : error .  (60)

	.  reduce 60


state 20
	CABECERA : PROCEDIMIENTO . IDENTIFICADOR $$6 PARENT_ABRE PARAMETROS PARENT_CIERRA  (28)

	IDENTIFICADOR  shift 45
	.  error


state 21
	ENTRADA : LEER . $$7 LISTA_IDS  (69)
	$$7 : .  (68)

	.  reduce 68

	$$7  goto 46


state 22
	SALIDA : ESCRIBIR . $$8 LISTA_ARG  (73)
	$$8 : .  (72)

	.  reduce 72

	$$8  goto 47


state 23
	PARTE_IF : SI . $$9 PARENT_ABRE EXPRESION PARENT_CIERRA $$10 SENTENCIAS  (81)
	$$9 : .  (79)

	.  reduce 79

	$$9  goto 48


state 24
	SENTENCIA_MIENTRAS : MIENTRAS . PARENT_ABRE EXPRESION PARENT_CIERRA SENTENCIAS  (85)

	PARENT_ABRE  shift 49
	.  error


state 25
	SENTENCIA_EN_CASO : SWITCH . IDENTIFICADOR LLAVE_ABRE LISTA_CASOS LLAVE_CIERRA  (86)

	IDENTIFICADOR  shift 50
	.  error


state 26
	ASIG : IDENTIFICADOR . IGUAL EXPRESION  (64)
	LLAMADA_PROCEDIMIENTO : IDENTIFICADOR . $$12 PARENT_ABRE LISTA_EXP PARENT_CIERRA  (93)
	$$12 : .  (92)

	IGUAL  shift 51
	PARENT_ABRE  reduce 92

	$$12  goto 52


state 27
	CUERPO_BLOQUE : DEC_VAR DEC_PROCEDIMIENTOS . BLQ_SENTENCIAS  (7)
	CUERPO_BLOQUE : DEC_VAR DEC_PROCEDIMIENTOS . SENTENCIA  (8)
	DEC_PROCEDIMIENTOS : DEC_PROCEDIMIENTOS . DEC_PROC  (24)

	error  shift 19
	PROCEDIMIENTO  shift 20
	LEER  shift 21
	ESCRIBIR  shift 22
	SI  shift 23
	MIENTRAS  shift 24
	SWITCH  shift 25
	IDENTIFICADOR  shift 26
	.  error

	BLQ_SENTENCIAS  goto 53
	SENTENCIA  goto 54
	DEC_PROC  goto 55
	CABECERA  goto 31
	OP_SIMPLE  goto 32
	OP_COMPUESTA  goto 33
	ASIG  goto 34
	ENTRADA  goto 35
	SALIDA  goto 36
	LLAMADA_PROCEDIMIENTO  goto 37
	SENTENCIA_SI  goto 38
	SENTENCIA_MIENTRAS  goto 39
	SENTENCIA_EN_CASO  goto 40
	PARTE_IF  goto 41


state 28
	CUERPO_BLOQUE : DEC_VAR BLQ_SENTENCIAS .  (9)
	BLQ_SENTENCIAS : BLQ_SENTENCIAS . SENTENCIA  (52)

	error  shift 19
	LEER  shift 21
	ESCRIBIR  shift 22
	SI  shift 23
	MIENTRAS  shift 24
	SWITCH  shift 25
	IDENTIFICADOR  shift 26
	LLAVE_CIERRA  reduce 9

	SENTENCIA  goto 56
	OP_SIMPLE  goto 32
	OP_COMPUESTA  goto 33
	ASIG  goto 34
	ENTRADA  goto 35
	SALIDA  goto 36
	LLAMADA_PROCEDIMIENTO  goto 37
	SENTENCIA_SI  goto 38
	SENTENCIA_MIENTRAS  goto 39
	SENTENCIA_EN_CASO  goto 40
	PARTE_IF  goto 41


state 29
	CUERPO_BLOQUE : DEC_VAR SENTENCIA .  (10)
	BLQ_SENTENCIAS : SENTENCIA . SENTENCIA  (53)

	error  shift 19
	LEER  shift 21
	ESCRIBIR  shift 22
	SI  shift 23
	MIENTRAS  shift 24
	SWITCH  shift 25
	IDENTIFICADOR  shift 26
	LLAVE_CIERRA  reduce 10

	SENTENCIA  goto 57
	OP_SIMPLE  goto 32
	OP_COMPUESTA  goto 33
	ASIG  goto 34
	ENTRADA  goto 35
	SALIDA  goto 36
	LLAMADA_PROCEDIMIENTO  goto 37
	SENTENCIA_SI  goto 38
	SENTENCIA_MIENTRAS  goto 39
	SENTENCIA_EN_CASO  goto 40
	PARTE_IF  goto 41


state 30
	DEC_PROCEDIMIENTOS : DEC_PROC .  (25)

	.  reduce 25


state 31
	DEC_PROC : CABECERA . BLOQUE  (26)

	LLAVE_ABRE  shift 8
	.  error

	BLOQUE  goto 58


state 32
	SENTENCIA : OP_SIMPLE . PUNTO_COMA  (54)

	PUNTO_COMA  shift 59
	.  error


state 33
	SENTENCIA : OP_COMPUESTA .  (55)

	.  reduce 55


state 34
	OP_SIMPLE : ASIG .  (56)

	.  reduce 56


state 35
	OP_SIMPLE : ENTRADA .  (57)

	.  reduce 57


state 36
	OP_SIMPLE : SALIDA .  (58)

	.  reduce 58


state 37
	OP_SIMPLE : LLAMADA_PROCEDIMIENTO .  (59)

	.  reduce 59


state 38
	OP_COMPUESTA : SENTENCIA_SI .  (61)

	.  reduce 61


state 39
	OP_COMPUESTA : SENTENCIA_MIENTRAS .  (62)

	.  reduce 62


state 40
	OP_COMPUESTA : SENTENCIA_EN_CASO .  (63)

	.  reduce 63


41: shift/reduce conflict (shift 60, reduce 84) on SINO
state 41
	SENTENCIA_SI : PARTE_IF . PARTE_ELSE  (78)
	PARTE_ELSE : .  (84)

	SINO  shift 60
	error  reduce 84
	LEER  reduce 84
	ESCRIBIR  reduce 84
	SI  reduce 84
	MIENTRAS  reduce 84
	SWITCH  reduce 84
	CASO  reduce 84
	SALTAR  reduce 84
	DEFECTO  reduce 84
	LLAVE_CIERRA  reduce 84
	IDENTIFICADOR  reduce 84

	PARTE_ELSE  goto 61


state 42
	DEC_TIPO : TIPO $$3 . CONJ_PALABRAS  (16)

	error  shift 62
	IDENTIFICADOR  shift 63
	.  error

	CONJ_PALABRAS  goto 64
	LISTA_PALS  goto 65


state 43
	DEC_VAR : DELIM_VAR1 CUERPO_DECLA_VARS DELIM_VAR2 .  (11)

	.  reduce 11


state 44
	CUERPO_DECLA_VARS : CUERPO_DECLA_VARS DEC_TIPO .  (13)

	.  reduce 13


state 45
	CABECERA : PROCEDIMIENTO IDENTIFICADOR . $$6 PARENT_ABRE PARAMETROS PARENT_CIERRA  (28)
	$$6 : .  (27)

	.  reduce 27

	$$6  goto 66


state 46
	ENTRADA : LEER $$7 . LISTA_IDS  (69)

	IDENTIFICADOR  shift 67
	.  error

	LISTA_IDS  goto 68


state 47
	SALIDA : ESCRIBIR $$8 . LISTA_ARG  (73)

	error  shift 69
	PARENT_ABRE  shift 70
	OP_ARIT12  shift 71
	OP_LOGICO1  shift 72
	CADENA  shift 73
	IDENTIFICADOR  shift 74
	VALOR  shift 75
	OP_LISTAS1  shift 76
	.  error

	EXPRESION  goto 77
	OPERAR_LISTA  goto 78
	LISTA_ARG  goto 79


state 48
	PARTE_IF : SI $$9 . PARENT_ABRE EXPRESION PARENT_CIERRA $$10 SENTENCIAS  (81)

	PARENT_ABRE  shift 80
	.  error


state 49
	SENTENCIA_MIENTRAS : MIENTRAS PARENT_ABRE . EXPRESION PARENT_CIERRA SENTENCIAS  (85)

	error  shift 69
	PARENT_ABRE  shift 70
	OP_ARIT12  shift 71
	OP_LOGICO1  shift 72
	IDENTIFICADOR  shift 74
	VALOR  shift 75
	OP_LISTAS1  shift 76
	.  error

	EXPRESION  goto 81
	OPERAR_LISTA  goto 78


state 50
	SENTENCIA_EN_CASO : SWITCH IDENTIFICADOR . LLAVE_ABRE LISTA_CASOS LLAVE_CIERRA  (86)

	LLAVE_ABRE  shift 82
	.  error


state 51
	ASIG : IDENTIFICADOR IGUAL . EXPRESION  (64)

	error  shift 69
	PARENT_ABRE  shift 70
	OP_ARIT12  shift 71
	OP_LOGICO1  shift 72
	IDENTIFICADOR  shift 74
	VALOR  shift 75
	OP_LISTAS1  shift 76
	.  error

	EXPRESION  goto 83
	OPERAR_LISTA  goto 78


state 52
	LLAMADA_PROCEDIMIENTO : IDENTIFICADOR $$12 . PARENT_ABRE LISTA_EXP PARENT_CIERRA  (93)

	PARENT_ABRE  shift 84
	.  error


state 53
	CUERPO_BLOQUE : DEC_VAR DEC_PROCEDIMIENTOS BLQ_SENTENCIAS .  (7)
	BLQ_SENTENCIAS : BLQ_SENTENCIAS . SENTENCIA  (52)

	error  shift 19
	LEER  shift 21
	ESCRIBIR  shift 22
	SI  shift 23
	MIENTRAS  shift 24
	SWITCH  shift 25
	IDENTIFICADOR  shift 26
	LLAVE_CIERRA  reduce 7

	SENTENCIA  goto 56
	OP_SIMPLE  goto 32
	OP_COMPUESTA  goto 33
	ASIG  goto 34
	ENTRADA  goto 35
	SALIDA  goto 36
	LLAMADA_PROCEDIMIENTO  goto 37
	SENTENCIA_SI  goto 38
	SENTENCIA_MIENTRAS  goto 39
	SENTENCIA_EN_CASO  goto 40
	PARTE_IF  goto 41


state 54
	CUERPO_BLOQUE : DEC_VAR DEC_PROCEDIMIENTOS SENTENCIA .  (8)
	BLQ_SENTENCIAS : SENTENCIA . SENTENCIA  (53)

	error  shift 19
	LEER  shift 21
	ESCRIBIR  shift 22
	SI  shift 23
	MIENTRAS  shift 24
	SWITCH  shift 25
	IDENTIFICADOR  shift 26
	LLAVE_CIERRA  reduce 8

	SENTENCIA  goto 57
	OP_SIMPLE  goto 32
	OP_COMPUESTA  goto 33
	ASIG  goto 34
	ENTRADA  goto 35
	SALIDA  goto 36
	LLAMADA_PROCEDIMIENTO  goto 37
	SENTENCIA_SI  goto 38
	SENTENCIA_MIENTRAS  goto 39
	SENTENCIA_EN_CASO  goto 40
	PARTE_IF  goto 41


state 55
	DEC_PROCEDIMIENTOS : DEC_PROCEDIMIENTOS DEC_PROC .  (24)

	.  reduce 24


state 56
	BLQ_SENTENCIAS : BLQ_SENTENCIAS SENTENCIA .  (52)

	.  reduce 52


state 57
	BLQ_SENTENCIAS : SENTENCIA SENTENCIA .  (53)

	.  reduce 53


state 58
	DEC_PROC : CABECERA BLOQUE .  (26)

	.  reduce 26


state 59
	SENTENCIA : OP_SIMPLE PUNTO_COMA .  (54)

	.  reduce 54


state 60
	PARTE_ELSE : SINO . $$11 SENTENCIAS  (83)
	$$11 : .  (82)

	.  reduce 82

	$$11  goto 85


state 61
	SENTENCIA_SI : PARTE_IF PARTE_ELSE .  (78)

	.  reduce 78


state 62
	LISTA_PALS : error .  (23)

	.  reduce 23


state 63
	CONJ_PALABRAS : IDENTIFICADOR . PUNTO_COMA  (17)
	LISTA_PALS : IDENTIFICADOR . $$5 COMA  (22)
	$$5 : .  (21)

	PUNTO_COMA  shift 86
	COMA  reduce 21

	$$5  goto 87


state 64
	DEC_TIPO : TIPO $$3 CONJ_PALABRAS .  (16)

	.  reduce 16


state 65
	CONJ_PALABRAS : LISTA_PALS . IDENTIFICADOR PUNTO_COMA  (18)
	LISTA_PALS : LISTA_PALS . IDENTIFICADOR $$4 COMA  (20)

	IDENTIFICADOR  shift 88
	.  error


state 66
	CABECERA : PROCEDIMIENTO IDENTIFICADOR $$6 . PARENT_ABRE PARAMETROS PARENT_CIERRA  (28)

	PARENT_ABRE  shift 89
	.  error


state 67
	LISTA_IDS : IDENTIFICADOR .  (71)

	.  reduce 71


state 68
	ENTRADA : LEER $$7 LISTA_IDS .  (69)
	LISTA_IDS : LISTA_IDS . COMA IDENTIFICADOR  (70)

	COMA  shift 90
	PUNTO_COMA  reduce 69


state 69
	EXPRESION : error .  (44)

	.  reduce 44


state 70
	EXPRESION : PARENT_ABRE . EXPRESION PARENT_CIERRA  (40)

	error  shift 69
	PARENT_ABRE  shift 70
	OP_ARIT12  shift 71
	OP_LOGICO1  shift 72
	IDENTIFICADOR  shift 74
	VALOR  shift 75
	OP_LISTAS1  shift 76
	.  error

	EXPRESION  goto 91
	OPERAR_LISTA  goto 78


state 71
	EXPRESION : OP_ARIT12 . EXPRESION  (38)

	error  shift 69
	PARENT_ABRE  shift 70
	OP_ARIT12  shift 71
	OP_LOGICO1  shift 72
	IDENTIFICADOR  shift 74
	VALOR  shift 75
	OP_LISTAS1  shift 76
	.  error

	EXPRESION  goto 92
	OPERAR_LISTA  goto 78


state 72
	EXPRESION : OP_LOGICO1 . EXPRESION  (41)

	error  shift 69
	PARENT_ABRE  shift 70
	OP_ARIT12  shift 71
	OP_LOGICO1  shift 72
	IDENTIFICADOR  shift 74
	VALOR  shift 75
	OP_LISTAS1  shift 76
	.  error

	EXPRESION  goto 93
	OPERAR_LISTA  goto 78


state 73
	LISTA_ARG : CADENA .  (77)

	.  reduce 77


state 74
	EXPRESION : IDENTIFICADOR .  (43)

	.  reduce 43


state 75
	EXPRESION : VALOR .  (39)

	.  reduce 39


state 76
	OPERAR_LISTA : OP_LISTAS1 . EXPRESION  (46)

	error  shift 69
	PARENT_ABRE  shift 70
	OP_ARIT12  shift 71
	OP_LOGICO1  shift 72
	IDENTIFICADOR  shift 74
	VALOR  shift 75
	OP_LISTAS1  shift 76
	.  error

	EXPRESION  goto 94
	OPERAR_LISTA  goto 78


state 77
	EXPRESION : EXPRESION . OP_ARIT12 EXPRESION  (34)
	EXPRESION : EXPRESION . OP_ARIT2 EXPRESION  (35)
	EXPRESION : EXPRESION . OP_LOGICO2 EXPRESION  (36)
	EXPRESION : EXPRESION . OP_LOGICO3 EXPRESION  (37)
	OPERAR_LISTA : EXPRESION . OP_LISTAS1  (45)
	OPERAR_LISTA : EXPRESION . OP_LISTAS2 EXPRESION  (47)
	OPERAR_LISTA : EXPRESION . OP_LISTAS3 EXPRESION OP_LISTAS4 EXPRESION  (48)
	LISTA_ARG : EXPRESION .  (76)

	OP_ARIT12  shift 95
	OP_ARIT2  shift 96
	OP_LOGICO2  shift 97
	OP_LOGICO3  shift 98
	OP_LISTAS1  shift 99
	OP_LISTAS2  shift 100
	OP_LISTAS3  shift 101
	PUNTO_COMA  reduce 76
	COMA  reduce 76


state 78
	EXPRESION : OPERAR_LISTA .  (42)

	.  reduce 42


state 79
	SALIDA : ESCRIBIR $$8 LISTA_ARG .  (73)
	LISTA_ARG : LISTA_ARG . COMA EXPRESION  (74)
	LISTA_ARG : LISTA_ARG . COMA CADENA  (75)

	COMA  shift 102
	PUNTO_COMA  reduce 73


state 80
	PARTE_IF : SI $$9 PARENT_ABRE . EXPRESION PARENT_CIERRA $$10 SENTENCIAS  (81)

	error  shift 69
	PARENT_ABRE  shift 70
	OP_ARIT12  shift 71
	OP_LOGICO1  shift 72
	IDENTIFICADOR  shift 74
	VALOR  shift 75
	OP_LISTAS1  shift 76
	.  error

	EXPRESION  goto 103
	OPERAR_LISTA  goto 78


state 81
	EXPRESION : EXPRESION . OP_ARIT12 EXPRESION  (34)
	EXPRESION : EXPRESION . OP_ARIT2 EXPRESION  (35)
	EXPRESION : EXPRESION . OP_LOGICO2 EXPRESION  (36)
	EXPRESION : EXPRESION . OP_LOGICO3 EXPRESION  (37)
	OPERAR_LISTA : EXPRESION . OP_LISTAS1  (45)
	OPERAR_LISTA : EXPRESION . OP_LISTAS2 EXPRESION  (47)
	OPERAR_LISTA : EXPRESION . OP_LISTAS3 EXPRESION OP_LISTAS4 EXPRESION  (48)
	SENTENCIA_MIENTRAS : MIENTRAS PARENT_ABRE EXPRESION . PARENT_CIERRA SENTENCIAS  (85)

	PARENT_CIERRA  shift 104
	OP_ARIT12  shift 95
	OP_ARIT2  shift 96
	OP_LOGICO2  shift 97
	OP_LOGICO3  shift 98
	OP_LISTAS1  shift 99
	OP_LISTAS2  shift 100
	OP_LISTAS3  shift 101
	.  error


state 82
	SENTENCIA_EN_CASO : SWITCH IDENTIFICADOR LLAVE_ABRE . LISTA_CASOS LLAVE_CIERRA  (86)

	CASO  shift 105
	.  error

	LISTA_CASOS  goto 106


state 83
	EXPRESION : EXPRESION . OP_ARIT12 EXPRESION  (34)
	EXPRESION : EXPRESION . OP_ARIT2 EXPRESION  (35)
	EXPRESION : EXPRESION . OP_LOGICO2 EXPRESION  (36)
	EXPRESION : EXPRESION . OP_LOGICO3 EXPRESION  (37)
	OPERAR_LISTA : EXPRESION . OP_LISTAS1  (45)
	OPERAR_LISTA : EXPRESION . OP_LISTAS2 EXPRESION  (47)
	OPERAR_LISTA : EXPRESION . OP_LISTAS3 EXPRESION OP_LISTAS4 EXPRESION  (48)
	ASIG : IDENTIFICADOR IGUAL EXPRESION .  (64)

	OP_ARIT12  shift 95
	OP_ARIT2  shift 96
	OP_LOGICO2  shift 97
	OP_LOGICO3  shift 98
	OP_LISTAS1  shift 99
	OP_LISTAS2  shift 100
	OP_LISTAS3  shift 101
	PUNTO_COMA  reduce 64


state 84
	LLAMADA_PROCEDIMIENTO : IDENTIFICADOR $$12 PARENT_ABRE . LISTA_EXP PARENT_CIERRA  (93)
	LISTA_EXP : .  (67)

	error  shift 69
	PARENT_ABRE  shift 70
	OP_ARIT12  shift 71
	OP_LOGICO1  shift 72
	IDENTIFICADOR  shift 74
	VALOR  shift 75
	OP_LISTAS1  shift 76
	PARENT_CIERRA  reduce 67
	COMA  reduce 67

	EXPRESION  goto 107
	OPERAR_LISTA  goto 78
	LISTA_EXP  goto 108


state 85
	PARTE_ELSE : SINO $$11 . SENTENCIAS  (83)

	error  shift 19
	LEER  shift 21
	ESCRIBIR  shift 22
	SI  shift 23
	MIENTRAS  shift 24
	SWITCH  shift 25
	LLAVE_ABRE  shift 109
	IDENTIFICADOR  shift 26
	.  error

	SENTENCIA  goto 110
	SENTENCIAS  goto 111
	OP_SIMPLE  goto 32
	OP_COMPUESTA  goto 33
	ASIG  goto 34
	ENTRADA  goto 35
	SALIDA  goto 36
	LLAMADA_PROCEDIMIENTO  goto 37
	SENTENCIA_SI  goto 38
	SENTENCIA_MIENTRAS  goto 39
	SENTENCIA_EN_CASO  goto 40
	PARTE_IF  goto 41


state 86
	CONJ_PALABRAS : IDENTIFICADOR PUNTO_COMA .  (17)

	.  reduce 17


state 87
	LISTA_PALS : IDENTIFICADOR $$5 . COMA  (22)

	COMA  shift 112
	.  error


state 88
	CONJ_PALABRAS : LISTA_PALS IDENTIFICADOR . PUNTO_COMA  (18)
	LISTA_PALS : LISTA_PALS IDENTIFICADOR . $$4 COMA  (20)
	$$4 : .  (19)

	PUNTO_COMA  shift 113
	COMA  reduce 19

	$$4  goto 114


state 89
	CABECERA : PROCEDIMIENTO IDENTIFICADOR $$6 PARENT_ABRE . PARAMETROS PARENT_CIERRA  (28)
	PARAMETROS : .  (30)

	error  shift 115
	TIPO  shift 116
	PARENT_CIERRA  reduce 30

	PARAMETROS  goto 117
	LISTA_PARAMS  goto 118


state 90
	LISTA_IDS : LISTA_IDS COMA . IDENTIFICADOR  (70)

	IDENTIFICADOR  shift 119
	.  error


state 91
	EXPRESION : EXPRESION . OP_ARIT12 EXPRESION  (34)
	EXPRESION : EXPRESION . OP_ARIT2 EXPRESION  (35)
	EXPRESION : EXPRESION . OP_LOGICO2 EXPRESION  (36)
	EXPRESION : EXPRESION . OP_LOGICO3 EXPRESION  (37)
	EXPRESION : PARENT_ABRE EXPRESION . PARENT_CIERRA  (40)
	OPERAR_LISTA : EXPRESION . OP_LISTAS1  (45)
	OPERAR_LISTA : EXPRESION . OP_LISTAS2 EXPRESION  (47)
	OPERAR_LISTA : EXPRESION . OP_LISTAS3 EXPRESION OP_LISTAS4 EXPRESION  (48)

	PARENT_CIERRA  shift 120
	OP_ARIT12  shift 95
	OP_ARIT2  shift 96
	OP_LOGICO2  shift 97
	OP_LOGICO3  shift 98
	OP_LISTAS1  shift 99
	OP_LISTAS2  shift 100
	OP_LISTAS3  shift 101
	.  error


state 92
	EXPRESION : EXPRESION . OP_ARIT12 EXPRESION  (34)
	EXPRESION : EXPRESION . OP_ARIT2 EXPRESION  (35)
	EXPRESION : EXPRESION . OP_LOGICO2 EXPRESION  (36)
	EXPRESION : EXPRESION . OP_LOGICO3 EXPRESION  (37)
	EXPRESION : OP_ARIT12 EXPRESION .  (38)
	OPERAR_LISTA : EXPRESION . OP_LISTAS1  (45)
	OPERAR_LISTA : EXPRESION . OP_LISTAS2 EXPRESION  (47)
	OPERAR_LISTA : EXPRESION . OP_LISTAS3 EXPRESION OP_LISTAS4 EXPRESION  (48)

	OP_LOGICO3  shift 98
	PARENT_CIERRA  reduce 38
	PUNTO_COMA  reduce 38
	COMA  reduce 38
	OP_ARIT12  reduce 38
	OP_ARIT2  reduce 38
	OP_LOGICO2  reduce 38
	OP_LISTAS1  reduce 38
	OP_LISTAS2  reduce 38
	OP_LISTAS3  reduce 38
	OP_LISTAS4  reduce 38

